src/test/deca/context/valid/child_override_method.deca
// Test of rule 2.6: the declared method has the same name than
// a method already defined in a super class

class A  {
    void displayHello(){
        println("Hello");
    }
}

class B extends A {
    void displayHello(){
        println("Hi");
    }
}

// Resultat:
//# TODOTEST
